fix text align

--- a/public_html/assets/Main/style/regulasi.css
+++ b/public_html/assets/Main/style/regulasi.css
@@ -201,7 +201,7 @@ nav .menu-toggle input:checked ~ span:last-child {
   border: solid var(--gray-secondary) 3px;
   border-radius: 24px;
 }
-.wrapper-undang2 h5{
+.wrapper-undang2 h5 .not-found{
   text-align: center;
   font-size: 14px;
   margin: 0;
